# klatt-dx

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  input.css  package-lock.json  package.json
.github/workflows/: gh-pages.yml
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/buttons/: mod.rs
src/components/form/: basic.rs  inputs.rs  mod.rs
src/components/plots/: mod.rs  spectrum.rs  waveform.rs
src/utils/: constants.rs  daisy.rs  js_value.rs  mod.rs  plotter.rs  state.rs  synth.rs
